--- a/contenido.html
+++ b/contenido.html
@@ -8,7 +8,7 @@
 <body>
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="ndex.html">
+    <a class="navbar-brand" href="index.html">
         <span class="d-block d-lg-none">RCTS</span>
         <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-start mb-2"
                                              src="resources/img/logo.jpeg" height="50" width="50"/></span>
@@ -21,7 +21,7 @@
             <li class="nav-item"><a class="nav-link " href="index.html">Inicio</a></li>
             <li class="nav-item"><a class="nav-link active " href="#">Contenido</a></li>
             <li class="nav-item"><a class="nav-link" href="galeria.html">Galeria</a></li>
-           <li class="nav-item"><a class="nav-link" href="softwaredesarroladores.html">Desarrolladores</a>
+            <li class="nav-item"><a class="nav-link" href="softwaredesarroladores.html">Desarrolladores</a>
             </li>
 
         </ul>
@@ -31,9 +31,9 @@
 <div class="container-md">
     <hr class="m-0"/>
     <!-- Inicio-->
-    <section class="resume-section-content" id="inicio">
-        <div class="resume-section-content">
-            <h2 class="mb-1">Inteligencia Artificial: Desafiando Fronteras y Transformando Sociedades</h2>
+    <section>
+        <article>
+            <h1 class="mb-1">Inteligencia Artificial: Desafiando Fronteras y Transformando Sociedades</h1>
             <div class="container px-4 text-center">
                 <div class="row gx-5">
                     <div class="col">
@@ -70,14 +70,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </article>
 
     </section>
     <hr class="m-0"/>
     <!-- HISTORIA-->
-    <section class="resume-section-content" id="historia">
-        <div class="resume-section-content">
-            <h2 class="mb-5">HISTORIA</h2>
+    <section>
+        <article>
+            <h3 class="mb-5">HISTORIA</h3>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                     <p>La historia de la inteligencia artificial comenzó en 1943 con la publicación del artículo «A
@@ -214,13 +214,13 @@
                 </div>
             </div>
 
-        </div>
+        </article>
     </section>
     <hr class="m-0"/>
     <!-- Tipos de IA-->
-    <section class="resume-section-content" id="himno">
-        <div class="resume-section-content">
-            <h2 class="mb-5">Tipos de inteligencia artificial</h2>
+    <section>
+        <article>
+            <h3 class="mb-5">Tipos de inteligencia artificial</h3>
 
             <p>La inteligencia artificial se puede organizar de varias maneras, según las etapas de desarrollo o las
                 acciones que se están realizando. </p>
@@ -259,13 +259,13 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
             </center>
-        </div>
+        </article>
     </section>
     <hr class="m-0"/>
     <!-- La inteligencia artificial en la educación-->
-    <section class="resume-section-content" id="edu">
-        <div class="resume-section-content">
-            <h2 class="mb-5">La inteligencia artificial en la educación</h2>
+    <section>
+        <article>
+            <h3 class="mb-5">La inteligencia artificial en la educación</h3>
             <p>La Inteligencia Artificial (IA) proporciona el potencial necesario para abordar algunos de los desafíos
                 mayores de la educación actual, innovar las prácticas de enseñanza y aprendizaje y acelerar el progreso
                 para la consecución del ODS 4. Sin embargo, los rápidos desarrollos tecnológicos conllevan
@@ -298,17 +298,18 @@
             </center>
 
 
-        </div>
+        </article>
     </section>
     <hr class="m-0"/>
-    <div>
+    <section>
         <h2>Bibliografia</h2>
         <a href="https://datascientest.com/es/inteligencia-artificial-definicion"><p>[1]Inteligencia artificial :
             definición, historia, usos, peligros</p></a>
         <a href="https://cloud.google.com/learn/what-is-artificial-intelligence?hl=es-419"><p>[2]¿Qué es la inteligencia
             artificial o IA?</p></a>
-        <a href="https://www.unesco.org/es/digital-education/artificial-intelligence"><p>[3] La inteligencia artificial en la educación</p></a>
-    </div>
+        <a href="https://www.unesco.org/es/digital-education/artificial-intelligence"><p>[3] La inteligencia artificial
+            en la educación</p></a>
+    </section>
 
 
 </div>
