--- a/galeria.html
+++ b/galeria.html
@@ -26,15 +26,20 @@
     </div>
 </nav>
 <!--FIN  Navigation-->
+<!-- inicio del contenido-->
 <div class="container-fluid">
-    <!-- OBRAS-->
-    <section class="resume-section-content" id="obras">
-        <div class="resume-section-content">
+
+    <!-- inicio de la seccion del articulo-->
+    <section >
+        <article >
+            <!-- titulo de 2do nivel-->
             <h2 class="mb-5">INTELIGENCIA ARTIFICIAL</h2>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow" style="width: 18rem;">
+            <div class="container"><!-- contendra todas las img-->
+                <div class="row"><!-- definimos el estilo fila en nuesta etiqueta div-->
+                    <div class="col-md-4"><!--definimos la primera columna la cual contendra nuestra img-->
+                        <div class="card mb-4 shadow" style="width: 18rem;"><!-- aplicamos un estilo para los bordes-->
+
+                            <!-- declaramos la img a mostrar con src le aplicamos un alto de 350 y un estido de tarjeta con class-->
                             <img src="resources/img/img7.png" class="card-img-top" height="350" alt="...">
                         </div>
                     </div>
@@ -93,9 +98,9 @@
                             <img src="resources/img/img15.jpg" class="card-img-top" height="350" alt="...">
                         </div>
                     </div>
-
-
+                    <!-- definimos la etiqueta center para que el video vaya centrado -->
                     <center>
+                        <!-- colocamos el iframe dado por  youtuve y que se muestre en nuestra pagina web-->
                         <iframe width="560" height="315"
                                 src="https://www.youtube.com/embed/gYGi9iDbHtM?si=Dm_9vIT_WFYuZUkt"
                                 title="YouTube video player" frameborder="0"
@@ -105,7 +110,7 @@
 
                 </div>
             </div>
-        </div>
+        </article>
     </section>
 </div>
 <script src="js/bootstrap.js"></script>
