--- a/softwaredesarroladores.html
+++ b/softwaredesarroladores.html
@@ -30,20 +30,20 @@
 
 <div class="container-fluid">
 
-    <h2 class="mb-5">DESARROLLADORES</h2>
-    <div class="container mt-4">
-        <center>
-            <img src="resources/img/logo.jpeg" class="img-fluid" height="500" width="500">
+    <h3 class="mb-5">DESARROLLADORES</h3>
+    <article class="container mt-4">
+        <center><!-- centramos el logo-->
+            <img src="resources/img/logo.jpeg" class="img-fluid" height="500" width="500"><!-- definimos el logo a usar con alto y ancho de 500-->
             <br>
         </center>
-        <table class="table table-bordered">
-            <thead>
+        <table class="table table-bordered"><!-- etiqueta table para crear nuestra tabla para nombrar a los desarrolladores-->
+            <thead><!-- encabezado de la tabla-->
             <tr>
                 <th>Nombre</th>
                 <th>Apellido</th>
             </tr>
             </thead>
-            <tbody>
+            <tbody><!-- cuerpo de la tabla-->
             <tr>
                 <td>ERIKA</td>
                 <td>CATAGUA MENDOZA</td>
@@ -64,7 +64,7 @@
             </tr>
             </tbody>
         </table>
-    </div>
+    </article>
 </div>
 </body>
 </html>
